fixed some spacing

--- a/style.css
+++ b/style.css
@@ -1,23 +1,23 @@
-body {
+body{
   background: #fff;
   padding: 0;
   margin: 25px 50px 75px 100px;
 }
 
 /* Style page content */
-.main {
+.main{
     margin-left: 160px; /* Same as the width of the sidebar */
     padding: 0px 10px;
-  }
+}
 
-.header {
+.header{
     padding: 30px;
     text-align: center;
     background: silver;
     color: black;
     font-size: 30px;
     border: 3px solid black;
-  }
+}
 
 .text-box{
   border: 2px solid black;
@@ -43,71 +43,68 @@ body {
   border: 2px solid black;
 }
 
-.dropdown {
+.dropdown{
     position: relative;
     display: inline-block;
-  }
+}
   
-  .dropdown-content {
+.dropdown-content{
     display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
     padding: 12px 16px;
     z-index: 1;
-  }
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+}
 
-  .fa {
+.dropdown:hover .dropdown-content{
+    display: block;
+}
+
+.fa{
     padding: 20px;
     font-size: 30px;
     width: 25px;
     text-align: center;
     text-decoration: none;
     border-radius: 50%;
-  }
+}
 
-  .fa-facebook {
+.fa-facebook{
     background: #3B5998;
-    color: white;
-    
-  }
+    color: white;  
+}
 
-  /* The sidebar menu */
-.sidenav {
-    height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 160px; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+.sidenav{
+    height: 100%;
+    width: 160px;
+    position: fixed;
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
     left: 0;
     background-color: silver;
-    overflow-x: hidden; /* Disable horizontal scroll */
+    overflow-x: hidden; /* Disable horizontal scroll */ 
     padding-top: 20px;
-  }
+}
 
-  /* The navigation menu links */
-.sidenav a {
+.sidenav a{
     padding: 6px 8px 10px 16px;
     text-decoration: none;
     font-size: 25px;
     color: black;
     display: block;
-  }
+}
   
-  /* When you mouse over the navigation links, change their color */
-  .sidenav a:hover {
+.sidenav a:hover{
     color: goldenrod;
     text-shadow: -1px -1px 0 #000,
     1px -1px 0 #000,
     -1px 1px 0 #000,
     1px 1px 0 #000;
     
-  }
+}
   
-  .footer {
+.footer{
     position: fixed;
     left: 0;
     bottom: 0;
@@ -115,5 +112,6 @@ body {
     background-color: silver;
     color: black;
     text-align: center;
-  }
+    padding: 5px;
+}
   
